# PyDTMC

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  meta.yaml  requirements-rtd.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/WORKFLOWS/: codeql.yml  coverage.yml
.github/workflows/: build.yml  code_analysis.yml  conda_text.yml  continuous_integration.yml  coverage.yml  license_update.yml  package_publishing.yml  package_publishing_test.yml  package_release.yml  test.yml
.run/: Main.run.xml  PyTest.run.xml  Sphinx.run.xml
PyDTMC/: decorators.py  markov_chain.py  plotting.py  validation.py
docs/: Makefile  conf.py  index.rst  make.bat  nitpick-exceptions.txt  requirements.txt
docs/_source/: index.rst
docs/sfdf/: custom_exceptions.doctree  genindex.doctree  index.doctree  markov_chain.doctree  markov_chain_methods_instance.doctree  markov_chain_methods_static.doctree  markov_chain_properties.doctree  plotting_functions.doctree
docs/source/: conf.py  custom_exceptions.rst  genindex.rst  hidden_markov_model.rst  hidden_markov_model_methods_instance.rst  hidden_markov_model_methods_static.rst  hidden_markov_model_properties.rst  index.rst  markov_chain.rst  markov_chain_methods_instance.rst  markov_chain_methods_static.rst  markov_chain_properties.rst  other_assessment_functions.rst  other_plotting_functions.rst  plotting_functions.rst  prolog_html.inc  prolog_latex.inc
docs/source/_static/css/: style.css
images/: frames_hmm.psd  frames_mc.psd
pydtmc/: __init__.py  algorithms.py  assessments.py  base_class.py  base_classes.py  computations.py  custom_types.py  decorators.py  exceptions.py  files_io.py  fitting.py  generators.py  globals.py  hidden_markov_model.py  hmm.py  markov_chain.py  measures.py  plotting.py  simulations.py  utilities.py  validation.py
tests/: benchmarks.py  conftest.py  test_aliases.py  test_assessments.py  test_classification.py  test_conversions.py  test_files.py  test_fitting.py  test_generators.py  test_generators_instance.py  test_generators_static.py  test_hmm.py  test_measures.py  test_periodicity.py  test_plotting.py  test_properties.py  test_simulations.py  test_stationary_distributions.py  test_steady_states.py  test_utilities.py  test_validation.py  utilities.py
tests/fixtures/: fixtures_aliases.json  fixtures_assessments.json  fixtures_benchmarks.json  fixtures_classification.json  fixtures_conversions.json  fixtures_fitting.json  fixtures_generators_instance.json  fixtures_generators_static.json  fixtures_hmm.json  fixtures_measures.json  fixtures_plotting.json  fixtures_properties.json  fixtures_simulations.json  fixtures_utilities.json  fixtures_validation.json
