[metadata]
description-file = README.md
license_files = LICENSE.md
requires-dist = setuptools

[bdist_wheel]
universal = 0

[coverage:run]
omit =
    setup.py
    pydtmc/__init__.py
    pydtmc/base_class.py
    pydtmc/custom_types.py
    pydtmc/decorators.py
    pydtmc/exceptions.py
    pydtmc/utilities.py
    tests/*

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    def __eq__
    def __hash__
    def __repr__
    def __str__
    if self\.debug