[metadata]
name = PyDTMC
author = Tommaso Belluzzo
author_email = tommaso.belluzzo@gmail.com
maintainer = Tommaso Belluzzo
maintainer_email = tommaso.belluzzo@gmail.com
description = A framework for discrete-time Markov chains analysis.
url = https://github.com/TommasoBelluzzo/PyDTMC
project_urls =
    Bug Tracker = https://github.com/TommasoBelluzzo/PyDTMC/issues
    Funding = https://www.paypal.com/donate?hosted_button_id=D8LH6DNYN7EN8
license = MIT
license_files =
    LICENSE.md
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Education
    Topic :: Office/Business :: Financial
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: General
keywords = mathematics statistics probability markov-chain stochastic-process analysis fitting simulation

[options]
python_requires = >=3.6
setup_requires = setuptools
install_requires =
    matplotlib
    networkx
    numpy
    scipy

[options.extras_require]
docs =
    docutils
    typing-extensions
    sphinx
    sphinx-autodoc-typehints
    sphinx-rtd-theme
lint =
    flake8
    pylint
package =
    defusedxml
    pydot
publish =
    twine
setup =
    setuptools
    wheel
tests =
    coverage
    pytest
    pytest-cov
    codecov
    coveralls

[bdist_wheel]
universal = 0

[coverage:run]
omit =
    docs/*
    pydtmc/__init__.py
    pydtmc/base_class.py
    pydtmc/custom_types.py
    pydtmc/decorators.py
    pydtmc/exceptions.py
    pydtmc/utilities.py
    tests/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __eq__
    def __hash__
    def __repr__
    def __str__
    if self\.debug
