[metadata]
name = PyDTMC
author = Tommaso Belluzzo
author_email = tommaso.belluzzo@gmail.com
maintainer = Tommaso Belluzzo
maintainer_email = tommaso.belluzzo@gmail.com
description = A full-featured and lightweight library for discrete-time Markov chains analysis.
url = https://github.com/TommasoBelluzzo/PyDTMC
project_urls =
    Bug Tracker = https://github.com/TommasoBelluzzo/PyDTMC/issues
    Donation = https://www.paypal.com/donate?hosted_button_id=D8LH6DNYN7EN8
license = MIT
license_files =
    LICENSE.md
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Intended Audience :: Education
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    Intended Audience :: Other Audience
    Topic :: Education
    Topic :: Office/Business
    Topic :: Scientific/Engineering
    Topic :: Text Processing
    Topic :: Other/Nonlisted Topic
keywords =
    markov-chain
    markov-chains
    markov-model
    markov-models
    markov-state-model
    markov-state-models
    hidden-markov-model
    hidden-markov-models
    mathematics
    statistics
    probability
    stochastic-process
    stochastic-processes
	analysis
	fitting
    simulation

[options]
python_requires = >=3.8
setup_requires =
    setuptools
install_requires =
    matplotlib
    networkx
    numpy
    scipy

[options.extras_require]
build =
    setuptools
    wheel
    twine
docs =
    docutils
    typing-extensions
    sphinx<=7.1.2
    sphinx-autodoc-typehints
    sphinx-rtd-theme
lint =
    flake8
    pylint
package =
    defusedxml
    numpydoc
    pandas
    pydot
tests =
    coverage
    pytest
    pytest-benchmark
    pytest-cov
    coveralls

[bdist_wheel]
universal = 0

[coverage:run]
omit =
    setup.py
    docs/*
    tests/*
    pydtmc/__init__.py
    pydtmc/base_class.py
    pydtmc/custom_types.py
    pydtmc/decorators.py
    pydtmc/exceptions.py
    pydtmc/utilities.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __eq__
    def __hash__
    def __repr__
    def __str__
    if self\.debug

[flake8]
count = True
ignore =
    C901,
    E501,
    W605
max-complexity = 10
max-line-length = 120
statistics = True

[pylint]
max-line-length = 120

[pylint.'MESSAGES CONTROL']
disable =
    C0103,
    C0114,
    C0116,
    C0132,
    C0301,
    C0302,
    C0415,
    R0801,
    R0903,
    R0904,
    R0912,
    R0913,
    R0914,
    R0915,
    R1702,
    W0107,
    W0123,
    W0212,
    W0611,
    W0632,
    W0703,
    W1401,
    W1514
